<resources>
    <string name="app_name">SymTrax 0.21.00</string>
    <string name="action_settings">Settings</string>
    <string name="action_symptoms">Symptoms</string>

    <!-- Subtitle text for the empty view that prompts the user to add a machine/item [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Please get started adding some symptom tracking data by clicking on the button below.</string>


    <string name="symptom_asc">Symptom &#9650;</string>
    <string name="symptom_desc">Symptom &#9660;</string>
    <string name="emotion_asc">Emotion &#9650;</string>
    <string name="emotion_desc">Emotion &#9660;</string>
    <string name="date_asc">Date &#9650;</string>
    <string name="date_desc">Date &#9660;</string>

    <!-- activity_add_edit_symtrax strings -->
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="symptom">Symptom:</string>
    <string name="severity">Severity:</string>
    <string name="trigger">Trigger:</string>
    <string name="trigger_hint">If known</string>
    <string name="emotion">Emotion:</string>
    <string name="emotion2">Emotion 2:</string>
    <string name="observation_hint">Observation or thoughts</string>
    <string name="observation">Observation:</string>
    <string name="outcome">Outcome:</string>
    <string name="outcome_hint">What was the outcome</string>
    <string name="add_edit_sym_trac_activity_title_add_record">Add Record</string>
    <string name="add_edit_sym_trac_activity_title_edit_record">Edit Record</string>

    <!-- activity_symptoms.xml -->
    <string name="empty_view_equipment_type_text">If there are no Symptoms listed
    please add some by clicking on the Floating Action Button below.</string>
    <string name="share_email">Share as email</string>
    <string name="share_text">Share as text message</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="insert_record_failed">Failed to save record</string>
    <string name="insert_record_succeeded">Record successfully saved</string>
    <string name="edit_update_record_failed">Failed to update record</string>
    <string name="edit_update_record_success">Update record succeeded</string>
    <string name="delete_record_failure">Record not deleted (Error)</string>
    <string name="delete_record_success">Record deleted</string>
    <string name="delete_dialog_msg">Delete this record</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="symptom_edit_text">Enter new symptom text</string>
    <string name="missing_symptom">A value is required to save a new Symptom</string>
    <string name="symtrax_provider_insert_record_failed">Record save of Symptom failed</string>
    <string name="symtrax_provider_insert_record_succeeded">Record save of Symptom succeeded</string>
    <string name="unsaved_changes_dialog_msg">Discard changes and quit editing</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="add_symptom">Add Symptom</string>
    <string name="edit_symptom">Edit Symptom</string>
    <string name="symtrax_table_update_failed">Symtrax table update failed</string>
    <string name="symtrax_table_update_succeeded">SymTrax table update succeeded</string>
    <string name="share_entire_db">Share DB in E-Mail</string>
    <string name="action_save_db_to_csv">Backup DB to phone as csv file</string>
    <string name="action_backup_db_to_storage">Backup  DB to phone</string>
    <string name="missing_date">Today\'s Date and or Time entered automatically. Date required for sorting </string>
    <string name="action_set_filters">Set Filters</string>
    <string name="action_save_filter">Save filter checkbox choices</string>
    <string name="action_delete_filter">Delete all filter checkbox choices</string>


</resources>
