<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.babarehner.android.symtrax.SymTraxActivity">

    <item
        android:id="@+id/action_symptom_activity"
        android:orderInCategory="100"
        android:title="@string/action_symptoms"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_share_entire_db"
        android:orderInCategory="100"
        android:title="@string/share_entire_db"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_backup_db_to_storage"
        android:orderInCategory="100"
        android:title="@string/action_backup_db_to_storage"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save_db_to_csv"
        android:orderInCategory="100"
        android:title="@string/action_save_db_to_csv"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>

